Added a check line.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,9 @@
 
   gtag('config', 'UA-44434564-4');
 </script>
-
+    <script>
+console.log("The template works.");
+</script>
   </head>
   <body>
     <section class="page-header">
